# efax

./: .gear-rules  Makefile.am  config.h.in  efax-0.9-altconf  efax-0.9-make.patch  efax-0.9a001114.config  efax-0.9a001114.patch  efax-0.9a051015.config  efax.spec
.gear/: efax-0.9a051015-alt-glib2-2.32.0.patch  efax.spec  rules
efax/: Makefile  acinclude.m4  autogen.sh  configure.ac  efax.1  efax.c  efaxio.c  efaxlib.c  efaxlib.h  efaxmsg.c  efix.1  fax
efax/efax/: Makefile.am  efax.c  efaxio.c  efaxlib.c  efaxmsg.c  fax
